--- a/Android/Ghosts-N-Whatever/app/src/main/AndroidManifest.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActiveGame"></activity>
+        <activity android:name=".ActiveGame" />
+        <activity android:name=".JoinGame"></activity>
     </application>
 
 </manifest>
